istio/carrier-portal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trimbletransportation-visibility-carrierportal-test-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trimbletransportation-visibility-carrierportal-test
        version: v1
        domain: blah.services.trimblevisibility.tech
    spec:
      containers:
      - name: trimbletransportation-visibility-carrierportal
        image: nginxdemos/hello
        resources:
          requests:
            memory: "350Mi"
            cpu: "125m"        
        ports:
        - containerPort: 80
          name: http
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        args: ["--collector.host-port=jaeger-collector:14267"]
      imagePullSecrets:
        - name: 104systems-acr-secret
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: trimbletransportation-visibility-carrierportal-test-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trimbletransportation-visibility-carrierportal-test
        version: v2
        domain: blah.services.trimblevisibility.tech
    spec:
      containers:
      - name: trimbletransportation-visibility-carrierportal
        image: nginxdemos/hello
        resources:
          requests:
            memory: "350Mi"
            cpu: "125m"
        ports:
        - containerPort: 80
          name: http
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        args: ["--collector.host-port=jaeger-collector:14267"]
      imagePullSecrets:
        - name: 104systems-acr-secret
      nodeSelector:
        beta.kubernetes.io/os: linux
