istio/carrier-portal-full.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: trimbletransportation-visibility-datasharing-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: trimbletransportation-visibility-datasharing-dev
        version: v1.0.0
    spec:
      containers:
      - name: trimbletransportation-visibility-datasharing
        image: 104systems.azurecr.io/datasharing/api:20190207.1 #__Build.BuildNumber__
        resources:
          requests:
            memory: "350Mi"
            cpu: "125m"        
        ports:
        - containerPort: 80
          name: http
      imagePullSecrets:
        - name: 104systems-acr-secret
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: trimbletransportation-visibility-datasharing-dev
  labels:
    app: trimbletransportation-visibility-datasharing-dev
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: trimbletransportation-visibility-datasharing-dev
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trimbletransportation-visibility-datasharing-dev
spec:
  hosts:
  - "datashare.services.trimblevisibility.tech"
  gateways:
  - trimbletransportation-visibility-datasharing-dev
  http:
  #- match:
  #  - uri:
  #      exact: /
  - route:
    - destination:
        host: trimbletransportation-visibility-datasharing-dev
        subset: v1
        port:
          number: 80
      weight: 100 
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trimbletransportation-visibility-datasharing-dev
spec:
  host: trimbletransportation-visibility-datasharing-dev
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1.0.0
#  - name: v2
#    labels:
#      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trimbletransportation-visibility-datasharing-dev 
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
